WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209759
REGRESSION (
r259211
): ASSERT(window) in applicationType() under shouldUseForegroundPriorityForClientNavigation()
https://bugs.webkit.org/show_bug.cgi?id=209759
Summary
REGRESSION (r259211): ASSERT(window) in applicationType() under shouldUseFore...
Tim Horton
Reported
2020-03-30 12:35:40 PDT
#1 0x00000001003ee42b in WTFCrashWithInfo(int, char const*, char const*, int) #2 0x0000000100c5dbed in WebKit::applicationType(UIWindow*) #3 0x0000000101129a41 in WebKit::PageClientImpl::isApplicationVisible() #4 0x00000001011abfe6 in WebKit::WebPageProxy::shouldUseForegroundPriorityForClientNavigation() const #5 0x0000000100fb52f5 in WebKit::WebPageProxy::loadRequest(WebCore::ResourceRequest&&, WebCore::ShouldOpenExternalURLsPolicy, API::Object*) #6 0x0000000100cdcc2d in -[WKWebView loadRequest:] shouldUseForegroundPriorityForClientNavigation() calls isApplicationVisible() when a view is unparented, but isApplicationVisible() depends on having a window to determine the type of application.
Attachments
Patch
(6.74 KB, patch)
2020-03-30 15:53 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-03-30 15:53:51 PDT
Created
attachment 394976
[details]
Patch
EWS
Comment 2
2020-03-30 16:41:43 PDT
Committed
r259242
: <
https://trac.webkit.org/changeset/259242
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 394976
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-03-30 16:42:16 PDT
<
rdar://problem/61079983
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug