REGRESSION (r259211): ASSERT(window) in applicationType() under shouldUseForegroundPriorityForClientNavigation() https://bugs.webkit.org/show_bug.cgi?id=209759

Reviewed by Darin Adler.

Make sure to not call applicationType() with a null window. This patch maintains previous behavior
in release builds.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::loadRequest):
(WebKit::WebPageProxy::loadFile):
(WebKit::WebPageProxy::loadData):
* UIProcess/WebPageProxy.h:
* UIProcess/ios/PageClientImplIOS.mm:
(WebKit::PageClientImpl::isApplicationVisible):
* UIProcess/ios/WebPageProxyIOS.mm:
(WebKit::WebPageProxy::shouldForceForegroundPriorityForClientNavigation const):
(WebKit::WebPageProxy::shouldUseForegroundPriorityForClientNavigation const): Deleted.


Canonical link: https://commits.webkit.org/222698@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259242 268f45cc-cd09-0410-ab3c-d52691b4dbfc